--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">Ghost</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="description">splash screen image</string>
 
 </resources>
