--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="app_name">Ghost</string>
     <string name="action_settings">Settings</string>
+    <string name="action_camera">Camera</string>
     <string name="hello_world">Hello world!</string>
     <string name="description">splash screen image</string>
     <string name="uva">University of Virginia</string>
