added strings for difficulty menu options

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,5 +12,7 @@
     <string name="names2">Madeleine Fleshman, and</string>
     <string name="names3">Grace McAden</string>
     <string name="score_bar">edit text</string>
-
+    <string name="difficulty_easy">Easy</string>
+    <string name="difficulty_hard">Hard</string>
+    
 </resources>
