--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name">Ghosts</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Difficulty Settings</string>
     <string name="action_camera">Camera</string>
     <string name="hello_world">Hello world!</string>
     <string name="description">splash screen image</string>
@@ -12,7 +12,8 @@
     <string name="names2">Madeleine Fleshman, and</string>
     <string name="names3">Grace McAden</string>
     <string name="score_bar">edit text</string>
-    <string name="difficulty_easy">Easy</string>
-    <string name="difficulty_hard">Hard</string>
+    <string name="difficulty_easy">Ditch</string>
+    <string name="difficulty_medium">Grave</string>
+    <string name="difficulty_hard">Cemetery</string>
     
 </resources>
